--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,12 @@ services:
       dockerfile: redis_dockerfile
     ports:
       - "6379" # Redis port, only exposed internally
+    healthcheck:
+      test: redis-cli -a timo-daytrade-redispass-8166d5d6-d622-4b62-bfdd-8c7d1a154c2f ping | grep PONG
+      interval: 10s
+      timeout: 15s
+      retries: 5
+      start_period: 15s
     profiles:
       - production
 
@@ -29,6 +35,12 @@ services:
     ports:
       - "6379:6379" # Redis port, exposed internally and externally
       - "8001:8001" # Redis Insight Port, exposed internally and externally
+    healthcheck:
+      test: redis-cli -a timo-daytrade-redispass-8166d5d6-d622-4b62-bfdd-8c7d1a154c2f ping | grep PONG
+      interval: 10s
+      timeout: 15s
+      retries: 5
+      start_period: 15s
     profiles:
       - dev
   
