Wait for Redis and RabbitMQ to be healthy:
Modified docker-compose.yml:
- Merge the health checks from main
- Create a startup order for services by depending on Redis and RabbitMQ
  being healthy before starting the Quote Driver Service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,10 @@ services:
     ports:
       - "5672"
     depends_on:
-      - rabbitmq
+      rabbitmq:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     profiles:
       - production
 
@@ -86,6 +89,9 @@ services:
     ports:
       - "5672"
     depends_on:
-      - rabbitmq-dev
+      rabbitmq-dev:
+        condition: service_healthy
+      redis-dev:
+        condition: service_healthy
     profiles:
       - dev
