Implement the Trigger Driver Microservice:
The trigger driver service listens for messages that will either ADD
or REMOVE a stock price from the system.  The trigger driver service
add the username to the symbol key in the Redis database. These keys
will be used by the Stock Watcher service to know which stock symbols to
refresh at the specified interval.

Create timo-trigger-driver-docker/trigger_driver_dockerfile:
- Builds and runs the Go trigger driver
- Dependencies are pinned in the go.mod file

Create timo-trigger-driver-src/go.*:
- Dependency pinning and automatic installation in the container

Create timo-trigger-driver-src/main.go:
- Defines the Trigger driver service which listens to the RabbitMQ
  queue, "trigger_symbol" for messages of the form
  "[ADD|REMOVE] [symbol] [username]". The ADD command will add the
  username to the Set stored at the key of "symbol". The REMOVE command
  will remove the username from the Set.

Modified docker-compose.yml:
- Added the trigger driver service
- Updated the previous redis service to be specified to Quote Prices
- Added a new redis service for storing the trigger symbols

Note:
- Trigger Symbols should likely be stored in a more resilient manner
  using MongoDB or by enabling persistent durability on Redis.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,22 @@ version: "3.9"
 
 services:
 ######## PRODUCTION ########
-  redis:
+  quote-price-redis:
+    build: 
+      context: ./timo-redis-docker/
+      dockerfile: redis_dockerfile
+    ports:
+      - "6379" # Redis port, only exposed internally
+    healthcheck:
+      test: redis-cli -a timo-daytrade-redispass-8166d5d6-d622-4b62-bfdd-8c7d1a154c2f ping | grep PONG
+      interval: 10s
+      timeout: 15s
+      retries: 5
+      start_period: 15s
+    profiles:
+      - production
+
+  trigger-symbols-redis:
     build: 
       context: ./timo-redis-docker/
       dockerfile: redis_dockerfile
@@ -37,25 +52,52 @@ services:
     build: 
       context: . # In order to be able to access files in the "timo-quote-driver-source" directory we have to move the context up one directory
       dockerfile: ./timo-quote-driver-docker/quote_driver_dockerfile
-    ports:
-      - "5672"
     depends_on:
       rabbitmq:
         condition: service_healthy
-      redis:
+      quote-price-redis:
+        condition: service_healthy
+    profiles:
+      - production
+
+  trigger-driver:
+    build: 
+      context: . # In order to be able to access files in the "timo-trigger-driver-source" directory we have to move the context up one directory
+      dockerfile: ./timo-trigger-driver-docker/trigger_driver_dockerfile
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+      trigger-symbols-redis:
         condition: service_healthy
     profiles:
       - production
 
 ######## DEVELOPMENT ########
-  redis-dev:
-    container_name: "redis"
+  quote-price-redis-dev:
+    container_name: "quote-price-redis"
     build: 
       context: ./timo-redis-docker/
       dockerfile: redis_dev_dockerfile
     ports:
       - "6379:6379" # Redis port, exposed internally and externally
       - "8001:8001" # Redis Insight Port, exposed internally and externally
+    healthcheck:
+      test: redis-cli -a timo-daytrade-redispass-8166d5d6-d622-4b62-bfdd-8c7d1a154c2f ping | grep PONG
+      interval: 10s
+      timeout: 15s
+      retries: 5
+      start_period: 15s
+    profiles:
+      - dev
+
+  trigger-symbol-redis-dev:
+    container_name: "trigger-symbol-redis"
+    build: 
+      context: ./timo-redis-docker/
+      dockerfile: redis_dev_dockerfile
+    ports:
+      - "6380:6379" # Redis port, exposed internally and externally
+      - "8002:8001" # Redis Insight Port, exposed internally and externally
     healthcheck:
       test: redis-cli -a timo-daytrade-redispass-8166d5d6-d622-4b62-bfdd-8c7d1a154c2f ping | grep PONG
       interval: 10s
@@ -86,12 +128,22 @@ services:
     build: 
       context: . # In order to be able to access files in the "timo-quote-driver-source" directory we have to move the context up one directory
       dockerfile: ./timo-quote-driver-docker/quote_driver_dockerfile
-    ports:
-      - "5672"
     depends_on:
       rabbitmq-dev:
         condition: service_healthy
-      redis-dev:
+      quote-price-redis-dev:
+        condition: service_healthy
+    profiles:
+      - dev
+
+  trigger-driver-dev:
+    build: 
+      context: . # In order to be able to access files in the "timo-trigger-driver-source" directory we have to move the context up one directory
+      dockerfile: ./timo-trigger-driver-docker/trigger_driver_dockerfile
+    depends_on:
+      rabbitmq-dev:
+        condition: service_healthy
+      trigger-symbol-redis-dev:
         condition: service_healthy
     profiles:
       - dev
