Add the Stock Watcher Microservice
This adds the Stock Watcher microservice which periodically refreshes
stock prices if they are marked as being used for a triggered buy or
sell action.

Create timo-stock-watcher-docker/stock_watcher_dockerfile:
- Dockerfile used to bring up and define the Stock Watcher microservice.

Create timo-stock-watcher-src/main.go:
- Every PRICE_REFRESH_FREQUENCY_SECONDS, refresh the stock prices by
  getting all of the keys from the Trigger Symbols Redis cache and then
  sending a Quote Price RPC call to the Quote Driver. This refreshes the
  stock price within the Quote Price cache. The returned quote price is
  then discarded as it is not needed.

Create timo-stock-watcher-src/go.*:
- Used for pinning dependencies and automatic installation within the
  container.

Modified docker-compose.yml:
- Add the Stock Watcher microservice to the docker-compose file.
- Remove the extra 's' from 'symbols' in trigger_symbol_redis

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     profiles:
       - production
 
-  trigger-symbols-redis:
+  trigger-symbol-redis:
     build: 
       context: ./timo-redis-docker/
       dockerfile: redis_dockerfile
@@ -67,7 +67,19 @@ services:
     depends_on:
       rabbitmq:
         condition: service_healthy
-      trigger-symbols-redis:
+      trigger-symbol-redis:
+        condition: service_healthy
+    profiles:
+      - production
+
+  stock-watcher:
+    build: 
+      context: . # In order to be able to access files in the "timo-trigger-driver-source" directory we have to move the context up one directory
+      dockerfile: ./timo-stock-watcher-docker/stock_watcher_dockerfile
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+      trigger-symbol-redis:
         condition: service_healthy
     profiles:
       - production
@@ -140,6 +152,18 @@ services:
     build: 
       context: . # In order to be able to access files in the "timo-trigger-driver-source" directory we have to move the context up one directory
       dockerfile: ./timo-trigger-driver-docker/trigger_driver_dockerfile
+    depends_on:
+      rabbitmq-dev:
+        condition: service_healthy
+      trigger-symbol-redis-dev:
+        condition: service_healthy
+    profiles:
+      - dev
+
+  stock-watcher-dev:
+    build: 
+      context: . # In order to be able to access files in the "timo-trigger-driver-source" directory we have to move the context up one directory
+      dockerfile: ./timo-stock-watcher-docker/stock_watcher_dockerfile
     depends_on:
       rabbitmq-dev:
         condition: service_healthy
