--- a/timo-web-interface/package.json
+++ b/timo-web-interface/package.json
@@ -9,7 +9,7 @@
     "amqplib": "^0.10.3",
     "bootstrap": "^5.2.3",
     "net": "^1.0.2",
-    "rabbit.js": "^0.4.4",
+    "net-browserify": "^0.2.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
