Update dummy quote server connection starting
Modified docker-compose.yml:
- Target host.docker.internal instead of localhost. This is needed as the
  dummy quote server is running on the host machine, not in the same
  container as the quote driver. Therefore the address needs to refer through
  the host machine and not the container.

Modified timo-dummy-quote-server-src/server.py:
- Return a constant timestamp for testing purposes. This is needed
  because the if the timestamp varies, tests become flaky.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -176,7 +176,7 @@ services:
     environment:
       - REDIS_CONNECTION_ADDRESS=quote-price-redis-dev:6379
       - RABBITMQ_CONNECTION_STRING=amqp://guest:guest@rabbitmq-dev:5672
-      - QUOTE_SERVER_ADDRESS=localhost:4444
+      - QUOTE_SERVER_ADDRESS=host.docker.internal:4444
     profiles:
       - dev
 
