--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -246,6 +246,20 @@ services:
     profiles:
       - dev
 
+  nginx-load-balancer:
+    restart: "on-failure"
+    build: 
+      context: ./nginx
+      dockerfile: nginx_dockerfile
+    depends_on:
+      - web-interface1-dev
+      - web-interface2-dev
+      - web-interface3-dev
+    ports:
+      - 5200:5200
+    profiles:
+      - dev
+
   web-server-dev:
     build:
       context: ./timo-web-server/
@@ -268,69 +282,44 @@ services:
   web-interface1-dev:
     build:
       context: ./timo-web-interface/
-      dockerfile: web_dockerfile_dev
-    ports:
-      - 3001:3001
+      dockerfile: web_dockerfile
     depends_on:
-      nginx-dev:
-        condition: service_started
       web-server-dev:
         condition: service_healthy
     profiles:
       - dev
     restart: on-failure
-    networks:
-      - loadbalancer
+    environment:
+      - PORT=3001
+      - SERVICE_NAME=web-interface1-dev
 
   web-interface2-dev:
     build:
       context: ./timo-web-interface/
-      dockerfile: web_dockerfile_dev
-    ports:
-      - 3002:3002
+      dockerfile: web_dockerfile
     depends_on:
-      nginx-dev:
-        condition: service_started
       web-server-dev:
         condition: service_healthy
     profiles:
       - dev
     restart: on-failure
-    networks:
-      - loadbalancer
+    environment:
+      - PORT=3002
+      - SERVICE_NAME=web-interface2-dev
 
   web-interface3-dev:
     build:
       context: ./timo-web-interface/
-      dockerfile: web_dockerfile_dev
-    ports:
-      - 3003:3003
+      dockerfile: web_dockerfile
     depends_on:
-      nginx-dev:
-        condition: service_started
       web-server-dev:
         condition: service_healthy
     profiles:
       - dev
     restart: on-failure
-    networks:
-      - loadbalancer
-
-  nginx-dev:
-    image: nginx:1.21.3-alpine
-    volumes:
-      - ./timo-web-interface/nginx-dev.conf:/etc/nginx/nginx.conf
-    ports:
-      - 80:80
-    profiles:
-      - dev
-    restart: on-failure
-    depends_on:
-      - web-interface1-dev
-      - web-interface2-dev
-      - web-interface3-dev
-    networks:
-      - loadbalancer
+    environment:
+      - PORT=3003
+      - SERVICE_NAME=web-interface3-dev
 
   transaction-server-dev:
     build:
